added vedio , fixed css path

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TripPeek</title>
     <!-- <link rel="stylesheet" href="CSS/reset.css" /> -->
-    <link rel="stylesheet" href="CSS/index.css" />
+    <link rel="stylesheet" href="./css/styleIndex.css" />
 </head>
 <body>
     <section class="container">
@@ -51,7 +51,7 @@
             </section>
             <section>
                 <video width="100%" controls autoplay muted>
-                    <source src="welcometojordan.webm" >
+                    <source src="./assets/welcometojordan.webm" >
                 </video>
             </section>
             <section>
