working on pickActivities () , render () functions

--- a/form.html
+++ b/form.html
@@ -33,6 +33,10 @@
 <script src="js/form.js"></script>
 <a href="./plan.html">click me </a>
 
+<div id ="renderDiv" style="background-color:palevioletred; padding: 40px;">
+
+
+</div>
 </body>
 
 </html>
