--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
 <script src="js/app.js"></script>
 <script src="js/plan.js"></script> <!--you can remove this script/ troubleshooting --> 
 <script src="js/form.js"></script>
-<a href="./plan.html">click me </a>
+<a  target="_blank" href="./plan.html">click me </a>
 
 <div id ="renderDiv" style="background-color:palevioletred; padding: 40px;">
 
