add json files and modify contact and activity html and css

--- a/activity.html
+++ b/activity.html
@@ -2,52 +2,69 @@
 <html>
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Activity</title>
-
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Page Title</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <title>Activity</title>
+  <link rel="stylesheet" href="./css/styleActivity.css" />
 </head>
 
 <body>
-
+  <section class="container">
     <header>
+      <img src="https://placehold.it/70x70/000000/FFFFFF" />
+      <section>
+        <ul>
+          <li><a href="index.html">home</a></li>
+          <li><a href="http://">get your plan</a></li>
+          <li><a href="http://"> about</a></li>
+          <li><a href="http://"> contact us</a></li>
+        </ul>
+      </section>
     </header>
 
-     <main>
+    <main>
 
-          <div>
-            <h1>Activity Name</h1>
-            <h3>Activity Catogery</h3>
-            <section>
+      <div>
+        <h1>Activity Name</h1>
+        <h3>Activity Catogery</h3>
+        <section>
 
-              <img src="https://placehold.it/400x400/000000/FFFFFF" />
+          <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Repellendus eligendi placeat exercitationem,
+            aut atque facere cumque dolores earum eveniet natus
+            cupiditate et provident. Nam sed ipsa voluptatum, ducimus
+            saepe quos.
+          </p>
 
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                   Repellendus eligendi placeat exercitationem, 
-                   aut atque facere cumque dolores earum eveniet natus
-                  cupiditate et provident. Nam sed ipsa voluptatum, ducimus
-                  saepe quos.</p>
+          <img src="https://placehold.it/300x200/000000/FFFFFF" />
 
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54180.68916944406!2d35.8953186185182!3d31.925799636216457!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151b5f96539bcc23%3A0x83d61bcf8e637e6d!2sAmman%20Citadel!5e0!3m2!1sen!2sjo!4v1615192954297!5m2!1sen!2sjo"
+            width="600" height="450" style="border:3;" allowfullscreen="" loading="lazy"></iframe>
 
-                <iframe src="https://www.google.com/maps" title="">
-                </iframe>
-
-            </section>
-            <form>
-                <a href="index.html">
-               <input type="button" value="Visit Website"> </a>
-            </form>
+        </section>
+        <form>
+          <a href="index.html">
+            <input type="button" value="Visit Website"> </a>
+        </form>
 
 
 
-          </div>
+      </div>
     </main>
 
     <footer>
+      <ul>
+        <li> <img src="assets/img/fb-icon.png" /></li>
+        <li><img src="assets/img/insta-icon.png" /></li>
+        <li><img src="assets/img/twit-icon.png" /></li>
+      </ul>
+      <img src="https://placehold.it/70x70/000000/FFFFFF" />
+      <b>Copyright 2021&copy;</b>
     </footer>
-
+  </section>
 
 </body>
 
