--- a/tree.html
+++ b/tree.html
@@ -8,9 +8,14 @@
 
 <body>
   <header>
+    
   </header>
 
   <main>
+    <h1 class="h">Plan A</h1>
+    <button  type="button">Day One</button><br>
+    <button  type="button">Day Two</button><br>
+    <button type="button">Day Three</button>
     <div class="timeline">
 
       <div class="container left">
