modify app.js file

--- a/index.html
+++ b/index.html
@@ -71,5 +71,8 @@
             <b>Copyright 2021&copy;</b>
         </footer>
     </section>
+    <script src="./js/app.js"></script>
+    <script src="./js/form.js"></script>
+    
 </body>
 </html>
