--- a/form.html
+++ b/form.html
@@ -28,15 +28,16 @@
   <label for="handCraft">Hand Crafts </label><br><br>
   <input type="submit" value="Submit">
 </form> 
-<script src="js/app.js"></script>
-<script src="js/plan.js"></script> <!--you can remove this script/ local storage troubleshooting --> 
-<script src="js/form.js"></script>
-<a href="./plan.html">click me </a>
+
+<a href="./tree.html">click me </a>
 
 <div id ="renderDiv" style="background-color:palevioletred; padding: 40px;">
 
 
 </div>
+<script src="js/app.js"></script>
+<script src="js/plan.js"></script> <!--you can remove this script/ local storage troubleshooting --> 
+<script src="js/form.js"></script>
 </body>
 
 </html>
