--- a/form.html
+++ b/form.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Form</title>
+  <link rel="stylesheet" href="css/styleForm.css" />
 </head>
 
 <body>
@@ -80,5 +82,6 @@
     <img src="https://placehold.it/70x70/000000/FFFFFF" />
     <b>Copyright 2021&copy;</b>
   </footer>
-  </body>
-  </html>>
+</body>
+
+</html>
