put map and image

--- a/tree.html
+++ b/tree.html
@@ -40,6 +40,7 @@
         <div class="content">
           <h2 id="h3">Activity #1</h2>          
           <p id="time3"></p>
+          <p id="cat1"></p>
           <p id="location3"></p>        </div>
       </div>
 
@@ -48,6 +49,7 @@
         <div class="content">
           <h2 id="h4">Activity #2</h2>
           <p id="time4"></p>
+          <p id="cat2"></p>
           <p id="location4"></p>        </div>
       </div>
 
@@ -64,6 +66,7 @@
         <div class="content">
           <h2 id="h6">Activity #3</h2>
           <p id="time6"></p>
+          <p id="cat3"></p>
           <p id="location6"></p>        </div>
       </div>
 
