--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </hr>
 
             <section>
-                <video width=100% height="620" controls autoplay muted>
+                <video width=100% height="620"  autoplay muted>
                     <source src="assets/welcometojordan.webm">
                 </video>
             </section>
