--- a/contact.html
+++ b/contact.html
@@ -1,81 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styleContact.css" />
-
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>About</title>
+    <link rel="stylesheet" href="./css/styleContact.css">
 </head>
-
 <body>
-    <section class="container">
-        <header>
-            <img src="https://placehold.it/70x70/000000" />
-            <section>
-                <ul>
-                    <li><a href="index.html">home</a></li>
-                    <li><a href="http://">get your plan</a></li>
-                    <li><a href="http://"> about</a></li>
-                    <li><a href="http://"> contact us</a></li>
-                </ul>
+    <header>
+        <img src="./assets/img/12174667.png" />
+        <section>
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="http://">get your plan</a></li>
+                <li><a href="http://"> about</a></li>
+                <li><a href="http://"> contact us</a></li>
+            </ul>
+        </section>
+    </header>
+    <main>
+        <div class="hero-image">
+            <div class="hero-text">
+            </div>
+        </div>
+        <section class="mainItem">
+            <h1>Meet TripPeek Founders</h1>
+        </section>
+        <section class="mainpar">
+            <p>Travel Services business, a Local Travel Website, hotels and travel brands and more.</p>
+        </section>
+        <div class="about">
+            <section class="secfounder">
+                <article class="vision">
+                    <h1>Founders Vision</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo cumque, consequatur accusantium
+                        earum ipsam iste quos numquam sed tenetur cum provident ut, porro dignissimos tempore autem!
+                        Reiciendis fuga voluptates autem.</p>
+                    <button>Read More</button>
+                </article>
+               <div class="imgFounders">
+            <img src="assets/img/mohammad.jpg" alt="">
+            <img src="assets/img/FURAT.jpg" alt="">
+        </div>
             </section>
-        </header>
-        <main>
-            <h2>About TripPeek</h2>
-            <p id ="about">Travel Services business, a Local Travel Website, hotels and travel brands and many more.</p>
-
-            <h2>Vision</h2>
-            <p id="groupvision">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit similique eveniet doloribus praesentium
-                dolorum
-                fuga placeat maxime corporis obcaecati quisquam? Magnam mollitia dicta voluptate quo est voluptatibus
-                quidem
-                corporis qui?</p>
-
-
-            <h2>Founders</h2>
-            <section id="firstrow">
-                <div>
-                    <img src="https://placehold.it/200x200/000000/FFFFFF" alt="">
-                    <h4>Name1</h4>
-                    <p>Information</p>
-                </div>
-
-                <div>
-                    <img src="https://placehold.it/200x200/000000/FFFFFF" alt="">
-                    <h4>Name2</h4>
-                    <p>Information</p>
-                </div>
-
-                <div>
-                    <img src="https://placehold.it/200x200/000000/FFFFFF" alt="">
-                    <h4>Name3</h4>
-                    <p>Information</p>
-                </div>
-            </section>
-
-
-            <section id="secondrow">
-                <div>
-                    <img src="https://placehold.it/200x200/000000/FFFFFF" alt="">
-                    <h4>Name4</h4>
-                    <p>Information</p>
-                </div>
-
-                <div>
-                    <img src="https://placehold.it/200x200/000000/FFFFFF" alt="">
-                    <h4>Name5</h4>
-                    <p>Information</p>
-                </div>
-            </section>
-        </main>
-
-        <footer>
-
-        </footer>
-    </section>
+        </div>
+        <div class="about2">
+            <img src="assets/img/SUHAIB.jpg" alt="">
+            <img src="assets/img/FARAH.jpg" alt="">
+            <img src="assets/img/MARWA.jpg" alt="">
+        </div>
+    </main>
+    <footer>
+        <div class="footericon">
+            <img src="./assets/img/fb-icon.png" />
+            <img src="./assets/img/insta-icon.png" />
+            <img src="./assets/img/twit-icon.png" />
+        </div>
+        <img width="150" height="100" src="./assets/img/12174667.png" />
+        <b>Copyright 2021&copy;</b>
+    </footer>
 </body>
-
 </html>
