--- a/activity.html
+++ b/activity.html
@@ -1,71 +1,77 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset='utf-8'>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Page Title</title>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
   <title>Activity</title>
   <link rel="stylesheet" href="./css/styleActivity.css" />
 </head>
-
 <body>
-  <section class="container">
-    <header>
-      <img src="https://placehold.it/70x70/000000/FFFFFF" />
-      <section>
-        <ul>
-          <li><a href="index.html">home</a></li>
-          <li><a href="http://">get your plan</a></li>
-          <li><a href="http://"> about</a></li>
-          <li><a href="http://"> contact us</a></li>
-        </ul>
-      </section>
-    </header>
-
-    <main>
-
-      <div>
-        <h1 id="1">Activity Name</h1>
-        <h3 id="2">Activity Catogery</h3>
-        <section>
-
-          <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Repellendus eligendi placeat exercitationem,
-            aut atque facere cumque dolores earum eveniet natus
-            cupiditate et provident. Nam sed ipsa voluptatum, ducimus
-            saepe quos.
-          </p>
-
-          <img id='3' src="https://placehold.it/300x200/000000/FFFFFF" />
-
-          <iframe id="4"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54180.68916944406!2d35.8953186185182!3d31.925799636216457!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151b5f96539bcc23%3A0x83d61bcf8e637e6d!2sAmman%20Citadel!5e0!3m2!1sen!2sjo!4v1615192954297!5m2!1sen!2sjo"
-            width="600" height="450" style="border:3;" allowfullscreen="" loading="lazy"></iframe>
-
-        </section>
-        <form>
-          <a href="index.html">
-            <input type="button" value="Visit Website"> </a>
-        </form>
-
-
-
-      </div>
-    </main>
-
-    <footer>
+  <header>
+    <img src="assets/img/12174667.png" />
+    <section>
       <ul>
-        <li> <img src="assets/img/fb-icon.png" /></li>
-        <li><img src="assets/img/insta-icon.png" /></li>
-        <li><img src="assets/img/twit-icon.png" /></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="http://">get your plan</a></li>
+        <li><a href="http://"> about</a></li>
+        <li><a href="http://"> contact us</a></li>
       </ul>
-      <img src="https://placehold.it/70x70/000000/FFFFFF" />
-      <b>Copyright 2021&copy;</b>
-    </footer>
-  </section>
-<script src="./js/render.js"></script>
+    </section>
+  </header>
+  <main>
+    <div class="hero-image">
+      <div class="hero-text">
+      </div>
+    </div>
+    <section class="mainItem">
+      <h1>Activities</h1>
+    </section>
+    <section class="mainpar">
+      <p>As far as local products go, Jordan is famous for its mosaics which are still produced to this day in the
+        Madaba area, beautiful hand made rugs,traditional sand bottles, ceramics,mud and beauty products. </p>
+    </section>
+    <div class="about">
+      <section class="secfounder">
+        <article class="vision">
+          <h1 id="1">Activity Name</h1>
+          <h3 id="2">Activity Catogery</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo cumque, consequatur accusantium
+            earum ipsam iste quos numquam sed tenetur cum provident ut, porro dignissimos tempore autem!
+            Reiciendis fuga voluptates autem.</p>
+          <button>Read More</button>
+        </article>
+      </section>
+    </div>
+    <div>
+      <section>
+        <div class="renderimg">
+          <!--check render image-->
+          <img id='3' class="activityimg" src="https://placehold.it/380x380/000000/FFFFFF%22" />
+        </div>
+        <img class='jordan' src="./assets/img/jordan.png" />
+        <div class="about1">
+          <section class="secfounder1">
+            <article class="vision1">
+              <iframe id="4"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54180.68916944406!2d35.8953186185182!3d31.925799636216457!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151b5f96539bcc23%3A0x83d61bcf8e637e6d!2sAmman%20Citadel!5e0!3m2!1sen!2sjo!4v1615192954297!5m2!1sen!2sjo"
+                allowfullscreen="" loading="lazy">
+              </iframe>
+            </article>
+          </section>
+        </div>
+        <img class='div1' src="./assets/img/div1.jpg" />
+      </section>
+      <button class="button1">Book Your Trip!</button>
+    </div>
+  </main>
+  <footer>
+    <div class="footericon">
+      <img src="./assets/img/fb-icon.png" />
+      <img src="./assets/img/insta-icon.png" />
+      <img src="./assets/img/twit-icon.png" />
+    </div>
+    <img width="150" height="100" src="./assets/img/12174667.png" />
+    <b>Copyright 2021&copy;</b>
+  </footer>
+  <script src="./js/render.js"></script>
 </body>
-
 </html>
+
