--- a/form.html
+++ b/form.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -43,7 +43,7 @@
         </label>
         <br>
 
-        <!-- <label id='selector'> -->
+
         <p class="p1">what kind of activities do you want to do in your trip?</p>
         <div id="radioButton">
           <input type="checkbox" class="n2" id="nature" value="nature">
@@ -56,15 +56,21 @@
           <label class="n1" for="urban"> Urban activities </label><br>
           <input type="checkbox" class="n2" id="handCraft" value="handCraft">
           <label class="n1" for="handCraft">Hand Crafts </label><br><br>
-          <input type="submit" value="Submit">
+           <input type="submit" value="Submit"  >
+           <a href="tree.html"><button type="button" >Check your Plan</button> </a>
+          
         </div>
-        <!-- </label> -->
+
       </form>
     </div>
 
-    <!-- <a href="./plan.html">click me </a> -->
+    <script src="js/app.js"></script>
+    <script src="js/plan.js"></script>
 
-    <!-- <div id="renderDiv" style="background-color:palevioletred; padding: 40px;"> -->
+    <script src="js/form.js"></script>
+ 
+
+
 
     </div>
     <img src="https://via.placeholder.com/300/09f/fff.png" alt="">
@@ -79,9 +85,90 @@
     <b>Copyright 2021&copy;</b>
   </footer>
   
+</body>
+
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Form</title>
+  <link rel="stylesheet" href="css/styleForm.css" />
+</head>
+<body>
+  <header>
+    <img src="./assets/img/12174667.png" />
+    <section>
+      <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="http://">get your plan</a></li>
+        <li><a href="http://"> about</a></li>
+        <li><a href="http://"> contact us</a></li>
+      </ul>
+    </section>
+  </header>
+  <main>
+    <div class="hero-image">
+      <div class="hero-text">
+      </div>
+  </div>
+  <div class="heroimg"><img width=800 src="./assets/img/kkkk.gif"  ></div>
+    <h1>provide us with the information.<br>let us do the work for you</h1>
+    <h3>fill this form with your trip information</h3>
+    <div class="main">
+      <img width=400 src="assets/img/b5aac28f4b263c02bccacbda6e2387c6.gif"  >
+      <form id="tripForm">
+        <label>
+          <p class="p1">How long will your trip take ?
+          <p>
+            <select id="time">
+              <option value="3">3 days</option>
+              <option value="6">6 days</option>
+            </select>
+        </label>
+        <label>
+          <p class="p1">what's your average budget ?
+          <p>
+            <select id="budget">
+              <option value="L">3000 (low) </option>
+              <option value="M">5000 (medium)</option>
+              <option value="G">7000 (high)</option>
+              <br>
+            </select>
+        </label>
+        <br>
+        <!-- <label id='selector'> -->
+        <p class="p1">what kind of activities do you want to do in your trip?</p>
+        <p class= "p2">(You Have To Pick Three Choices)</p>
+        <div id="radioButton">
+          <input type="checkbox" class="n2" id="nature" value="nature">
+          <label class="n1" for="nature"> Nature and Adventure</label><br>
+          <input type="checkbox" class="n2" id="historical" value="historical">
+          <label class="n1" for="historical"> Historical cites </label><br>
+          <input type="checkbox" class="n2" id="urban" value="urban">
+          <label class="n1" for="urban"> Urban activities </label><br>
+          <input type="checkbox" class="n2" id="handCraft" value="handCraft">
+          <label class="n1" for="handCraft">Hand Crafts </label><br><br>
+          <input type="submit" class="submitBut" value="Submit">
+        </div>
+        <!-- </label> -->
+      </form>
+    </div>
+    <!-- <a href="./plan.html">click me </a> -->
+    <!-- <div id="renderDiv" style="background-color:palevioletred; padding: 40px;"> -->
+    </div>
+  </main>
+  <footer>
+    <div class="footericon">
+      <img src="./assets/img/fb-icon.png" />
+     <img src="./assets/img/insta-icon.png" />
+     <img src="./assets/img/twit-icon.png" />
+ </div>
+ <img width="150" height="100" src="./assets/img/12174667.png" />
+ <b>Copyright 2021&copy;</b>
+  </footer>
   <script src="js/app.js"></script>
   <script src="js/plan.js"></script>
   <script src="js/form.js"></script>
 </body>
-
 </html>
