--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="container">
 
         <header>
-            <img src="https://placehold.it/70x70/000000/FFFFFF" />
+            <img src="./assets/img/12174667.png" />
             <section>
                 <ul>
                     <li><a href="index.html">home</a></li>
@@ -102,7 +102,7 @@
             </hr>
 
             <section>
-                <video width=100% height="620" controls autoplay muted>
+                <video width=100% height="620"  autoplay >
                     <source src="assets/welcometojordan.webm">
                 </video>
             </section>
