--- a/tree.html
+++ b/tree.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -78,6 +78,91 @@
   <footer>
   </footer>
  
+  <script src="./js/tree.js"></script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="./css/styleTree.css">
+</head>
+<body>
+  <header>
+    <!-- <img src="./assets/img/12174667.png" />
+    <section>
+      <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="http://">get your plan</a></li>
+        <li><a href="http://"> about</a></li>
+        <li><a href="http://"> contact us</a></li>
+      </ul>
+    </section> -->
+  </header>
+  <main>
+    <div class="hero-image">
+      <div class="hero-text">
+      </div>
+    </div>
+    <div class="mygif"> <img src="./assets/img/kkkk.gif"></div>
+    <h1 class="h">Plan A</h1>
+    <div class="timeline">
+      <div class="container left">
+        <div class="content">
+          <h2 id="h1">Hotel</h2>
+          <p id="time1"></p>
+          <p id="location1"></p>
+        </div>
+      </div>
+      <div class="container right">
+        <div class=content>
+          <h2 id="h2">Resturent #1 (breakfast)</h2>
+          <p id="time2"></p>
+          <p id="location2"></p>
+        </div>
+      </div>
+      <div class="container left">
+        <div class="content">
+          <h2 id="h3">Activity #1</h2>
+          <p id="time3"></p>
+          <p id="cat1"></p>
+          <p id="location3"></p>
+        </div>
+      </div>
+      <div class="container right">
+        <div class="content">
+          <h2 id="h4">Activity #2</h2>
+          <p id="time4"></p>
+          <p id="cat2"></p>
+          <p id="location4"></p>
+        </div>
+      </div>
+      <div class="container left">
+        <div class="content">
+          <h2 id="h5">Resturent #2 (dinner)</h2>
+          <p id="time5"></p>
+          <p id="location5"></p>
+        </div>
+      </div>
+      <div class="container right">
+        <div class="content">
+          <h2 id="h6">Activity #3</h2>
+          <p id="time6"></p>
+          <p id="cat3"></p>
+          <p id="location6"></p>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="footericon">
+      <img src="./assets/img/fb-icon.png" />
+      <img src="./assets/img/insta-icon.png" />
+      <img src="./assets/img/twit-icon.png" />
+    </div>
+    <img width="150" height="100" src="./assets/img/12174667.png" />
+    <b>Copyright 2021&copy;</b>
+  </footer>
   <script src="./js/tree.js"></script>
 </body>
 </html>
