--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="mySlides fade">
-                    <img src="assets/img/petra-night.jpeg" style="width:100%">
+                    <img src="assets/img/tradition.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides fade">
