--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <section>
                 <ul>
                     <li><a href="index.html">home</a></li>
-                    <li><a href="http://">get your plan</a></li>
-                    <li><a href="http://"> about</a></li>
-                    <li><a href="http://"> contact us</a></li>
+                    <li><a href="form.html">get your plan</a></li>
+                    <li><a href="about.html"> about</a></li>
+                    <li><a href="contact.html"> contact us</a></li>
                 </ul>
             </section>
         </header>
