--- a/Medical-Tourism.html
+++ b/Medical-Tourism.html
@@ -5,7 +5,8 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Medical tourism</title>
-    <link rel="stylesheet" href="css/Medical-Tourism.css">
+    <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="css/styleMedical-Tourism.css">
 </head>
 
 <body>
@@ -15,8 +16,8 @@
             <ul>
                 <li><a href="index.html">home</a></li>
                 <li><a href="form.html">get your plan</a></li>
-                <li><a href="about.html"> about</a></li>
-                <li><a href="contact.html"> contact us</a></li>
+                <li><a href="about.html"> Travelling Tips</a></li>
+                <li><a href="contact.html"> contact Us</a></li>
             </ul>
         </section>
     </header>
@@ -39,7 +40,7 @@
                 <img src="./assets/img/dead-Sea.webp" alt="Dead Sea">
                 <article class="artical2">
                     <h3>Dead Sea</h3>
-                    <p>
+                    <p class="fonts">
                         Has been proven to help
                         skin conditions such as psoriasis, eczema, atopic dermatitis, vitiligo, and acne, as well as
                         conditions such as respiratory diseases, rheumatic and orthopedic diseases. exfoliates the skin
@@ -47,13 +48,13 @@
                         of cellulite. Furthermore, Dead Sea mud promotes blood circulation and relaxes the nerves, which
                         in turn has been shown to help provide pain relief in sufferers of arthritis and rheumatism.</p>
                 </article>
-                <button class="button">Read More</button>
+                <button class="button1">Read More</button>
             </section>
             <section class="secright">
                 <img src="https://media-cdn.tripadvisor.com/media/photo-s/0a/cb/0b/ee/hot-springs-spa-area.jpg" />
                 <article class="artical1">
                     <h3>Ma'in Hot Springs</h3>
-                    <p> Jordan you want to treat yourself to a natural spa, then Jordan has got you
+                    <p class="fonts"> Jordan you want to treat yourself to a natural spa, then Jordan has got you
                         covered.The Ma’in Hot Springs is a magnificent natural spa. It is one of the best natural spas,
                         according to Vogue.Thus, Hamammat Ma’in regularly attracts medical tourists. Taking a bath in
                         the mineral-rich hot
@@ -62,7 +63,7 @@
                         spa as King Herald and Cleopatra did centuries ago!
                     </p>
                 </article>
-                <button class="button">Read More</button>
+                <button class="button2">Read More</button>
             </section>
             <section class="secleft">
                 <img class="img2" src="https://i.pinimg.com/originals/26/68/87/266887bd0e9c8fea76b49a5377bcfa07.jpg"
@@ -70,12 +71,12 @@
                 <br>
                 <article class="artical2">
                     <h3>Afra Hot Springs</h3>
-                    <p>Located 26 km north of the city of Tafilah, the less-known Afra Hot Springs are less known than
+                    <p class="fonts">Located 26 km north of the city of Tafilah, the less-known Afra Hot Springs are less known than
                         Ma’in. The hot mineral water flows from 15 different water springs, ranging in temperature from
                         45° to 48° C. These mineral-rich waters help in the treatment of infertility, arteriosclerosis,
                         anemia, rheumatism, and many other chronic diseases.</p>
                 </article>
-                <button class="button">Read More</button>
+                <button class="button3">Read More</button>
             </section>
     </main>
     <footer>
