--- a/form.html
+++ b/form.html
@@ -93,6 +93,7 @@
 <html lang="en">
 <head>
   <title>Form</title>
+  <link rel="stylesheet" href="./css/fonts.css">
   <link rel="stylesheet" href="css/styleForm.css" />
 </head>
 <body>
@@ -101,9 +102,9 @@
     <section>
       <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="http://">get your plan</a></li>
-        <li><a href="http://"> about</a></li>
-        <li><a href="http://"> contact us</a></li>
+        <li><a href="form.html">get your plan</a></li>
+        <li><a href="about.html"> Travelling Tips</a></li>
+        <li><a href="contact.html"> contact Us</a></li>
       </ul>
     </section>
   </header>
