--- a/shopping.html
+++ b/shopping.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Shopping in Amman</title>
+    <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="css/styleShopping.css">
 </head>
 <body>
@@ -12,9 +13,9 @@
         <section>
             <ul>
                 <li><a href="index.html">home</a></li>
-                <li><a href="http://">get your plan</a></li>
-                <li><a href="http://"> about</a></li>
-                <li><a href="http://"> contact us</a></li>
+                <li><a href="form.html">get your plan</a></li>
+                <li><a href="about.html"> Travelling Tips</a></li>
+                <li><a href="contact.html"> contact Us</a></li>
             </ul>
         </section>
     </header>
