--- a/activity.html
+++ b/activity.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Activity</title>
+  <link rel="stylesheet" href="./css/fonts.css">
   <link rel="stylesheet" href="./css/styleActivity.css" />
 </head>
 <body>
@@ -10,9 +11,9 @@
     <section>
       <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="http://">get your plan</a></li>
-        <li><a href="http://"> about</a></li>
-        <li><a href="http://"> contact us</a></li>
+        <li><a href="form.html">get your plan</a></li>
+        <li><a href="about.html"> Travelling Tips</a></li>
+        <li><a href="contact.html"> contact Us</a></li>
       </ul>
     </section>
   </header>
