--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>About</title>
+    <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/styleContact.css">
 </head>
 <body>
@@ -12,9 +13,9 @@
         <section>
             <ul>
                 <li><a href="index.html">home</a></li>
-                <li><a href="http://">get your plan</a></li>
-                <li><a href="http://"> about</a></li>
-                <li><a href="http://"> contact us</a></li>
+                <li><a href="form.html">get your plan</a></li>
+                <li><a href="about.html"> Travelling Tips</a></li>
+                <li><a href="contact.html"> contact Us</a></li>
             </ul>
         </section>
     </header>
@@ -39,15 +40,21 @@
                     <button>Read More</button>
                 </article>
                <div class="imgFounders">
-            <img src="assets/img/mohammad.jpg" alt="">
-            <img src="assets/img/FURAT.jpg" alt="">
+                   <a href="https://www.linkedin.com/in/mohammad-quthama-500541184/">
+            <img src="assets/img/mohammad.jpg" alt=""></a>
+            <a href="https://www.linkedin.com/in/furatmalkawi/">
+            <img src="assets/img/FURAT.jpg" alt=""></a>
         </div>
             </section>
         </div>
         <div class="about2">
-            <img src="assets/img/SUHAIB.jpg" alt="">
-            <img src="assets/img/FARAH.jpg" alt="">
-            <img src="assets/img/MARWA.jpg" alt="">
+            <a href="https://www.linkedin.com/in/suhaib-bany-younis-36ab0293/">
+            <img src="assets/img/SUHAIB.jpg" alt=""></a>
+            <a href="https://www.linkedin.com/in/farah-wahaibi/">
+            <img src="assets/img/FARAH.jpg" alt=""></a>
+            <a href="https://www.linkedin.com/in/marwan-reyad-al-khawaldah-7a390717a/">
+            <img src="assets/img/MARWAN.jpg" alt="">
+        </a>
         </div>
     </main>
     <footer>
