make changes on home page style by css

--- a/form.html
+++ b/form.html
@@ -11,10 +11,10 @@
     <img src="./assets/img/12174667.png" />
     <section>
       <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="http://">get your plan</a></li>
-        <li><a href="http://"> about</a></li>
-        <li><a href="http://"> contact us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="http://">Get Your Plan</a></li>
+        <li><a href="http://">Travelling Tips</a></li>
+        <li><a href="http://">Contact Us</a></li>
       </ul>
     </section>
   </header>
