--- a/tree.html
+++ b/tree.html
@@ -7,7 +7,7 @@
 
 <body>
   <header>
-    <!-- <img src="./assets/img/12174667.png" />
+    <img src="./assets/img/12174667.png" />
     <section>
       <ul>
         <li><a href="index.html">home</a></li>
@@ -15,35 +15,33 @@
         <li><a href="http://"> about</a></li>
         <li><a href="http://"> contact us</a></li>
       </ul>
-    </section> -->
+    </section>
   </header>
   <main>
     <div class="hero-image">
       <div class="hero-text">
       </div>
     </div>
-
-
     <div class="mygif"> <img src="./assets/img/kkkk.gif"></div>
     <h1 class="h">Plan A</h1>
     <div class="timeline">
       <div class="container left">
         <div class="content">
-          <h2 id="h1">Hotel</h2>
+          <a href=""><h2 id="h1">Hotel</h2></a>
           <p id="time1"></p>
           <p id="location1"></p>
         </div>
       </div>
       <div class="container right">
         <div class=content>
-          <h2 id="h2">Resturent #1 (breakfast)</h2>
+          <a href=""><h2 id="h2">Resturent #1 (breakfast)</h2></a>
           <p id="time2"></p>
           <p id="location2"></p>
         </div>
       </div>
       <div class="container left">
         <div class="content">
-          <h2 id="h3">Activity #1</h2>
+          <a href=""><h2 id="h3">Activity #1</h2></a>
           <p id="time3"></p>
           <p id="cat1"></p>
           <p id="location3"></p>
@@ -51,7 +49,7 @@
       </div>
       <div class="container right">
         <div class="content">
-          <h2 id="h4">Activity #2</h2>
+          <a href=""><h2 id="h4">Activity #2</h2></a>
           <p id="time4"></p>
           <p id="cat2"></p>
           <p id="location4"></p>
@@ -59,14 +57,14 @@
       </div>
       <div class="container left">
         <div class="content">
-          <h2 id="h5">Resturent #2 (dinner)</h2>
+          <a href=""><h2 id="h5">Resturent #2 (dinner)</h2></a>
           <p id="time5"></p>
           <p id="location5"></p>
         </div>
       </div>
       <div class="container right">
         <div class="content">
-          <h2 id="h6">Activity #3</h2>
+          <a href=""><h2 id="h6">Activity #3</h2></a>
           <p id="time6"></p>
           <p id="cat3"></p>
           <p id="location6"></p>
